Squash merge bugfix/converted-files into develop